# haskell-photoshop

./: .gitignore  ChangeLog.md  README.md  haskell-photoshop.cabal  hie.yaml  project-cis5520.cabal  stack.yaml
app/: Benchmarking.hs  Main.hs
dist-newstyle/cache/: compiler  config
src/: IO.hs  Lib.hs  PPM.hs  Pixel.hs  QuadTree.hs
test/: Spec.hs
