cabal-version:  2.2
name:           haskell-photoshop
version:        0.1.0.0
description:    Please see the README on GitHub at <https://github.com/githubuser/haskell-photoshop#readme>
homepage:       https://github.com/githubuser/haskell-photoshop#readme
bug-reports:    https://github.com/githubuser/haskell-photoshop/issues
author:         Jason Yan and Justin Zhang
maintainer:     jasyan@seas.upenn.edu
copyright:      2022 Jason Yan and Justin Zhang
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    README.md
    ChangeLog.md

source-repository head
  type: git
  location: https://github.com/githubuser/haskell-photoshop

common common-stanza
  ghc-options:         -Wno-type-defaults -fwarn-incomplete-patterns -Wincomplete-patterns
  build-depends:
      base >=4.15
    , HUnit
    , QuickCheck
    , containers
    , filepath
    , pretty
    , network
    , directory
    , random
    , mtl
    , hip
    , JuicyPixels
    , vector
    , criterion
    -- , split
  default-language:
    Haskell2010
  -- these extensions are enabled for GHC2021, turning them on now for
  -- future compatibility
  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DoAndIfThenElse
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    NoStarIsType
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances

library
  import:
      common-stanza
  exposed-modules:
      PPM
      QuadTree
      Pixel
  hs-source-dirs:
      src
  default-language: Haskell2010

executable haskell-photoshop-exe
  import:
      common-stanza
  main-is:
      Main.hs
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      haskell-photoshop


test-suite haskell-photoshop-test
  import:
      common-stanza
  type:
      exitcode-stdio-1.0
  main-is:
      Spec.hs
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      haskell-photoshop


benchmark img-processing-benchmark
  type:                exitcode-stdio-1.0
  hs-source-dirs:      app, src
  main-is:             Benchmarking.hs
  build-depends:       base
                     , criterion
                     , JuicyPixels
                     , vector
  default-language:    Haskell2010
  ghc-options: -fsimpl-tick-factor=10000
  default-extensions:
    ImportQualifiedPost
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DoAndIfThenElse
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralisedNewtypeDeriving
    HexFloatLiterals
    ImplicitPrelude
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    NoStarIsType
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeOperators
    TypeSynonymInstances